[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = [] }
axum-extra = { version = "0.9", features = ["form"] }
axum-auth = "0.7"

hyper = "1.1.0"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
anyhow = "1"
log = "0.4.21"
tracing = "0.1"
